client side added

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,6 +3,13 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
-    script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.4/angular.min.js")
+    link(rel='stylesheet', href='https://ajax.googleapis.com/ajax/libs/angular_material/1.1.9/angular-material.min.css')
+    script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular.min.js")
+    script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular-animate.min.js")
+    script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular-aria.min.js")
+    script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular-messages.min.js")
+
+    script(src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.9/angular-material.min.js")
+    script(src="/javascripts/app/app.js")
   body
     block content
