--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,7 @@
 doctype html
 html
   head
-    title= title
+    title="SagoMini"
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='https://ajax.googleapis.com/ajax/libs/angular_material/1.1.9/angular-material.min.css')
     script(src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.7/angular.min.js")
